# ros2-communication-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  for_portfolio.md
ros2_ws/src/listener_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/listener_pkg/listener_pkg/: listener_node.py
ros2_ws/src/listener_pkg/test/: ament_flake8.ini  test_flake8.py
ros2_ws/src/service_pkg/: package.xml  setup.py
ros2_ws/src/service_pkg/service_pkg/: service_client.py  service_server.py
ros2_ws/src/service_pkg/test/: test_service_logic.py
ros2_ws/src/talker_pkg/: package.xml  setup.py
ros2_ws/src/talker_pkg/talker_pkg/: talker_node.py
src/listener_pkg/: CMakeLists.txt  package.xml
src/listener_pkg/listener_pkg/: listener_node.py
src/service_pkg/: CMakeLists.txt  package.xml
src/service_pkg/launch/: framework.launch.py
src/service_pkg/service_pkg/: service_client.py  service_server.py
src/talker_pkg/: CMakeLists.txt  package.xml
src/talker_pkg/talker_pkg/: talker_node.py
