<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>listener_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 subscriber node for consuming chatter topic output.</description>
  <maintainer email="jloaiza505@gmail.com">james</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
